[tool.poetry]
name = "mab-distances"
version = "0.1.0"
description = "Compare different methods for comaprising antibody sequences"
authors = ["Tadeusz Satlawa <tadeusz.satlawa@naturalantibody.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
riot-na = "^1.0.4"
streamlit = "^1.37.0"
python-levenshtein = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
